--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
+    "sass": "^1.83.4",
+    "sass-loader": "^16.0.4",
     "vite": "^6.0.5"
   }
 }
